# osg

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  LICENSE  LICENSES.md  Makefile  README.md  claims.yml  pyproject.toml
docker/: Dockerfile.cpu  Dockerfile.gpu
docs/: data_access_actions.md  experiment_metadata.example.yml  git_delivery.md  instrument_evidence.md  literature_matrix.md  loaddef_source_audit.md  newtonian_noise_evidence.md  paper1_author_affiliation_evidence.md  paper1_literature_matrix.csv  paper23_completion_plan_2026-07-14.md  roadmap.md
reports/: COMMON-WU04-preregistered-evaluation-criteria.md  COMMON-WU05-locked-scientific-environment.md  COMMON-WU06-autodl-locked-suite.md  P1-E001-foundation.md  P1-E002-detectability-foundation.md  P1-E003-gradient-detectability-foundation.md  P1-E004-distance-attenuation-foundation.md  P1-G10-release.md  P1-G6-final-figure-structure.md  P1-G7-helgoland-discrepancy-decomposition.md  P1-G8-human-review-arrangement.md  P1-G9-single-command-reproduction.md  P1-RC01-scope-governance-freeze.md  P1-RC02-frequency-coverage-requirements.md  P1-RC03-structured-literature-review.md  P1-RC04-observable-ledger.md  P1-WU03-point-mass.md  P1-WU04-thin-disk.md  P1-WU05-disk-numerical.md  P1-WU06-rectangle.md  P1-WU07-gaussian-surface.md  P1-WU08-volume-cells.md  P1-WU09-density-compensation.md  P1-WU10-gravity-gradient.md  P1-WU11-planar-surface-grid.md  P1-WU12-spherical-surface-grid.md  P1-WU13-spectrum-convention.md  P1-WU14-snr.md  P1-WU15-spectral-preprocessing.md  P1-WU16-detection-threshold.md  (+138 more)
tests/: __init__.py
(+402 files in other folders)
