[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "oceangravity"
version = "0.1.0"
description = "Reproducible modelling and detection of ocean-induced gravity signals"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ocean Gravity Program contributors" }]
dependencies = [
  "h5netcdf[h5py]>=1.3",
  "numpy>=2.0",
  "obspy>=1.5.0",
  "scipy>=1.13",
  "xarray>=2024.1",
  "pyyaml>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oceangravity"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]
markers = [
  "physics: analytic or published physics benchmark",
  "regression: frozen numerical regression test",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
